--- a/index.html
+++ b/index.html
@@ -1,10 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Title</title>
-</head>
-<body>
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Dead On Descent</title>
+		<link rel="stylesheet" href="css/bootstrap.min.css">
+		<script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+		<script defer rel="text/javascript" src="./js/bootstrap.min.js"></script>
+	</head>
+	<body>
+		<div class="container">
+			<div class="navbar navbar-inverse">
+				<div class="container-fluid">
+					<div class="navbar-header">
+						<button type="button" class="navbar-toggle collapse" data-toggle="collapse" data-target="navbar-collapse-1" aria-expanded="false">
+							<span class="sr-only">Toggle Navigation</span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+						</button>
+						<a class="navbar-brand" href="index.html">Home</a>
+					</div>
 
-</body>
+					<div class="collapse navbar-collapse" id="navbar-collapse-1">
+						<ul class="nav navbar-nav">
+							<li class="active"><a href="services.html">Services<span class="sr-only">(current)</span></a></li>
+							<li><a href="pictures.html">Images</a></li>
+							<li class="dropdown">
+								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="caret"></span></a>
+								<ul class="dropdown-menu">
+									<li><a href="pictures.html">Images</a></li>
+									<li role="separator" class="divider"></li>
+									<li><a href="services.html">Services</a></li>
+									<li role="separator" class="divider"></li>
+									<li><a href="contact.html">Contact</a></li>
+								</ul>
+							</li>
+						</ul>
+
+						<form class="navbar-form navbar-right">
+							<div class="form-group">
+								<input type="text" class="form-control" placeholder="Search">
+							</div>
+							<button type="submit" class="btn btn-default">Submit</button>
+						</form>
+					</div>
+				</div>
+			</div>
+		</div>
+	</body>
 </html>
