--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	</head>
 	<body>
 		<div class="container">
+			<div class="row">
 			<div class="navbar navbar-inverse">
 				<div class="container-fluid">
 					<div class="navbar-header">
@@ -47,6 +48,18 @@
 					</div>
 				</div>
 			</div>
+			</div>
+			<div class="row">
+				<div class="logo col-md-6">
+					<h1>DEAD ON DESCENT WATERFOWL<h1>
+				</div>
+				<div class="col-md-6">
+
+				</div>
+			</div>
 		</div>
+
+
+
 	</body>
 </html>
