added custom styles and edited index

--- a/index.html
+++ b/index.html
@@ -5,61 +5,101 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Dead On Descent</title>
 		<link rel="stylesheet" href="css/bootstrap.min.css">
+		<link rel="stylesheet" href="css/custom.css">
 		<script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 		<script defer rel="text/javascript" src="./js/bootstrap.min.js"></script>
 	</head>
 	<body>
-		<div class="container">
-			<div class="row">
-			<div class="navbar navbar-inverse">
-				<div class="container-fluid">
-					<div class="navbar-header">
-						<button type="button" class="navbar-toggle collapse" data-toggle="collapse" data-target="navbar-collapse-1" aria-expanded="false">
-							<span class="sr-only">Toggle Navigation</span>
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-						</button>
-						<a class="navbar-brand" href="index.html">Home</a>
-					</div>
-
-					<div class="collapse navbar-collapse" id="navbar-collapse-1">
-						<ul class="nav navbar-nav">
-							<li class="active"><a href="services.html">Services<span class="sr-only">(current)</span></a></li>
-							<li><a href="pictures.html">Images</a></li>
-							<li class="dropdown">
-								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="caret"></span></a>
-								<ul class="dropdown-menu">
-									<li><a href="pictures.html">Images</a></li>
-									<li role="separator" class="divider"></li>
-									<li><a href="services.html">Services</a></li>
-									<li role="separator" class="divider"></li>
-									<li><a href="contact.html">Contact</a></li>
-								</ul>
-							</li>
-						</ul>
-
-						<form class="navbar-form navbar-right">
-							<div class="form-group">
-								<input type="text" class="form-control" placeholder="Search">
+		<!--======================
+		NAVBAR
+		======================-->
+			<div class="container">
+				<div class="row">
+					<div class="navbar navbar-inverse">
+						<div class="container-fluid">
+							<div class="navbar-header">
+								<button type="button" class="navbar-toggle collapse" data-toggle="collapse" data-target="navbar-collapse-1" aria-expanded="false">
+									<span class="sr-only">Toggle Navigation</span>
+									<span class="icon-bar"></span>
+									<span class="icon-bar"></span>
+									<span class="icon-bar"></span>
+								</button>
+								<a class="navbar-brand" href="index.html">Home</a>
 							</div>
-							<button type="submit" class="btn btn-default">Submit</button>
-						</form>
+
+							<div class="collapse navbar-collapse" id="navbar-collapse-1">
+								<ul class="nav navbar-nav">
+									<li class="active"><a href="services.html">Services<span class="sr-only">(current)</span></a></li>
+									<li><a href="pictures.html">Images</a></li>
+									<li class="dropdown">
+										<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="caret"></span></a>
+										<ul class="dropdown-menu">
+											<li><a href="pictures.html">Images</a></li>
+											<li role="separator" class="divider"></li>
+											<li><a href="services.html">Services</a></li>
+											<li role="separator" class="divider"></li>
+											<li><a href="contact.html">Contact</a></li>
+										</ul>
+									</li>
+								</ul>
+
+								<form class="navbar-form navbar-right">
+									<div class="form-group">
+										<input type="text" class="form-control" placeholder="Search">
+									</div>
+									<button type="submit" class="btn btn-default">Submit</button>
+								</form>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
-			</div>
-			<div class="row">
-				<div class="logo col-md-6">
-					<h1>DEAD ON DESCENT WATERFOWL<h1>
+			<!--======================
+			LOGO
+			=======================-->
+			<div class="container">
+				<div class="row col-md-12 container-2">
+					<img class="logo" src="images/pintail_wood_bg.png" width="">
 				</div>
-				<div class="col-md-6">
-
-				</div>
 			</div>
-		</div>
+			<hr>
+			<div class="container">
+				<div class="row card">
+					<div class="col-md-4">
+						<img class="image" src="images/bgLines.jpg" width="350px">
+					</div>
+					<div class="col-md-8">
+						<h1 class="text-center">Long Lining for Ducks</h1>
+						<p>
+					Donec ullamcorper nulla non metus auctor fringilla. Integer posuere erat a ante venenatis dapibus
+					posuere velit aliquet. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut
+					fermentum massa justo sit amet risus. Vestibulum id ligula porta felis euismod semper. Praesent commodo
+					cursus magna, vel scelerisque nisl consectetur et. Nullam quis risus eget urna mollis ornare vel eu leo.
+					Aenean lacinia bibendum nulla sed consectetur.<br>
 
+					Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit
+					amet risus. Nullam quis risus eget urna mollis ornare vel eu leo. Nulla vitae elit libero, a pharetra
+					]augue. Curabitur blandit tempus porttitor. Vestibulum id ligula porta felis euismod semper. Maecenas
+					faucibus mollis interdum. Donec sed odio dui.
+				</p>
+					</div>
+				</div>
+				<div class="container">
+					<div class="row card">
+						<div class="col-md-8">
+							<h1 class="text-center">The Mandarin Duck</h1>
+							<p>
+								Donec id elit non mi porta gravida at eget metus. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit
+								non mi porta gravida at eget metus. Donec id elit non mi porta gravida at eget metus.<br>
 
+								Cras justo odio, dapibus ac facilisis in, egestas eget quam. Etiam porta sem malesuada magna mollis euismod. Duis mollis, est
+								non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Nulla vitae elit libero, a pharetra augue.
+								Aenean lacinia bibendum nulla sed consectetur.</p>
+						</div>
+						<div class="col-md-4">
 
+						</div>
+					</div>
+				</div>
 	</body>
 </html>
