finishing up index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		======================-->
 			<div class="container">
 				<div class="row">
-					<div class="navbar navbar-inverse">
+					<div class="navbar navbar-inverse navbar-fixed-top bottom-shadow">
 						<div class="container-fluid">
 							<div class="navbar-header">
 								<button type="button" class="navbar-toggle collapse" data-toggle="collapse" data-target="navbar-collapse-1" aria-expanded="false">
@@ -62,11 +62,10 @@
 					<img class="logo" src="images/pintail_wood_bg.png" width="">
 				</div>
 			</div>
-			<hr>
 			<div class="container">
 				<div class="row card">
 					<div class="col-md-4">
-						<img class="image" src="images/bgLines.jpg" width="350px">
+						<img class="image" src="images/bgLines.jpg">
 					</div>
 					<div class="col-md-8">
 						<h1 class="text-center">Long Lining for Ducks</h1>
@@ -84,6 +83,7 @@
 				</p>
 					</div>
 				</div>
+			</div>
 				<div class="container">
 					<div class="row card">
 						<div class="col-md-8">
@@ -97,9 +97,17 @@
 								Aenean lacinia bibendum nulla sed consectetur.</p>
 						</div>
 						<div class="col-md-4">
-
+							<img class="image" src="images/mandarin.jpg">
 						</div>
 					</div>
 				</div>
+			</div>
+			<div class="container">
+				<div class="row">
+					<div class="panel-footer footer">
+						<p class="text-center">&copy; 2017 D.O.D Waterfowl</p>
+					</div>
+				</div>
+			</div>
 	</body>
 </html>
