--- a/pictures.html
+++ b/pictures.html
@@ -4,34 +4,33 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Dead On Descent</title>
+		<link rel="stylesheet" href="css/bootstrap.min.css">
+		<link rel="stylesheet" href="css/custom.css">
+		<script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+		<script defer rel="text/javascript" src="./js/bootstrap.min.js"></script>
 	</head>
 	<body>
 	<div class="container">
-		<div class="navbar navbar-inverse">
+		<nav class="navbar navbar-fixed-top navbar-inverse bottom-shadow">
 			<div class="container-fluid">
 				<div class="navbar-header">
-					<button type="button" class="navbar-toggle collapse" data-toggle="collapse" data-target="navbar-collapse-1" aria-expanded="false">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1" aria-expanded="false">
 						<span class="sr-only">Toggle Navigation</span>
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="index.html">Home</a>
+					<a class="navbar-brand" href="index.html"><img src="images/dodwords.png" width="100px"></a>
 				</div>
 
 				<div class="collapse navbar-collapse" id="navbar-collapse-1">
 					<ul class="nav navbar-nav">
 						<li class="active"><a href="services.html">Services<span class="sr-only">(current)</span></a></li>
-						<li><a href="pictures.html">Images</a></li>
-						<li class="dropdown">
-							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="caret"></span></a>
-							<ul class="dropdown-menu">
-								<li><a href="pictures.html">Images</a></li>
-								<li role="separator" class="divider"></li>
-								<li><a href="services.html">Services</a></li>
-								<li role="separator" class="divider"></li>
-								<li><a href="contact.html">Contact</a></li>
-							</ul>
+							<li><a href="pictures.html">Images</a></li>
+							<li role="separator" class="divider"></li>
+							<li><a href="services.html">Services</a></li>
+							<li role="separator" class="divider"></li>
+							<li><a href="contact.html">Contact</a></li>
 						</li>
 					</ul>
 
@@ -43,7 +42,7 @@
 					</form>
 				</div>
 			</div>
-		</div>
+		</nav>
 	</div>
 	</body>
 </html>
