added social links

--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Dead On Descent</title>
+		<link rel="stylesheet" href="fonts/fa/css/font-awesome.min.css">
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/custom.css">
 		<script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -87,9 +88,13 @@
 		</form>
 	</div>
 	<div class="container-fluid">
-		<div class="row">
-			<div class=" panel-footer footer footer-bottom">
+		<div class="row col-sm-12">
+			<div class="panel-footer footer">
 				<p class="text-center">&copy; 2017 D.O.D Waterfowl</p>
+				<div class="social">
+					<a href="https://www.facebook.com/dodwaterfowl" target="_blank"><i class="fa fa-3x fa-facebook-official" aria-hidden="true"></i></a>
+					<a href="https://twitter.com/dodwaterfowl" target="_blank"><i class="fa fa-3x fa-twitter-square" aria-hidden="true"></i></a>
+				</div>
 			</div>
 		</div>
 	</div>
