--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Dead On Descent</title>
+		<link rel="stylesheet" href="fonts/fa/css/font-awesome.min.css">
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/custom.css">
 		<script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -54,11 +55,11 @@
 			=======================-->
 			<div class="container">
 				<div class="row col-md-12 container-2">
-					<img class="logo" src="images/pintail_wood_bg.png" width="">
+					<img class="logo shadow" src="images/pintail_wood_bg.png" width="">
 				</div>
 			</div>
 			<div class="container">
-				<div class="row card">
+				<div class="row card shadow">
 					<div class="col-md-4">
 						<img class="image" src="images/bgLines.jpg">
 					</div>
@@ -80,7 +81,7 @@
 				</div>
 			</div>
 				<div class="container">
-					<div class="row card">
+					<div class="row card shadow">
 						<div class="col-md-8">
 							<h1 class="text-center">The Mandarin Duck</h1>
 							<p>
@@ -98,9 +99,13 @@
 				</div>
 			</div>
 			<div class="container-fluid">
-				<div class="row col=sm-12">
+				<div class="row col-sm-12">
 					<div class="panel-footer footer">
 						<p class="text-center">&copy; 2017 D.O.D Waterfowl</p>
+						<div class="social">
+							<a href="https://www.facebook.com/dodwaterfowl" target="_blank"><i class="fa fa-3x fa-facebook-official" aria-hidden="true"></i></a>
+							<a href="https://twitter.com/dodwaterfowl" target="_blank"><i class="fa fa-3x fa-twitter-square" aria-hidden="true"></i></a>
+						</div>
 					</div>
 				</div>
 			</div>
