working on about page

--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
 		<link rel="stylesheet" href="css/custom.css">
 		<script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 		<script defer rel="text/javascript" src="./js/bootstrap.min.js"></script>
+		<script defer rel="text/javascript" src="js/custom.js"></script>
 	</head>
 	<body>
 	<div class="container">
@@ -26,10 +27,10 @@
 
 				<div class="collapse navbar-collapse" id="navbar-collapse-1">
 					<ul class="nav navbar-nav">
-						<li class="active"><a href="services.html">Services<span class="sr-only">(current)</span></a></li>
+						<li class="active"><a href="about.html">Services<span class="sr-only">(current)</span></a></li>
 							<li><a href="pictures.html">Images</a></li>
 							<li role="separator" class="divider"></li>
-							<li><a href="services.html">Services</a></li>
+							<li><a href="about.html">About Us</a></li>
 							<li role="separator" class="divider"></li>
 							<li><a href="contact.html">Contact</a></li>
 						</li>
@@ -42,6 +43,20 @@
 						<button type="submit" class="btn btn-default">Submit</button>
 					</form>
 				</div>
+			</div>
+		</div>
+	</div>
+	<div class="container">
+		<div class="jumbotron">
+			<h1>Dead On Descent Waterfowl</h1>
+			<p>Our purpose in life is to bring GREAT waterfowl to Utah, By conservation of key areas in and around Utah County.</p>
+			<p>Our dream is to one day have solid diked in WMA's like that of northern Utah.</p>
+		</div>
+	</div>
+	<div class="container">
+		<div class="col-md-12">
+			<div class="card">
+				<p>text here</p>
 			</div>
 		</div>
 	</div>
