--- a/pictures.html
+++ b/pictures.html
@@ -9,6 +9,7 @@
 		<link rel="stylesheet" href="css/custom.css">
 		<script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 		<script defer rel="text/javascript" src="./js/bootstrap.min.js"></script>
+		<script defer rel="text/javascript" src="js/custom.js"></script>
 	</head>
 	<body>
 	<div class="container">
@@ -26,15 +27,14 @@
 
 				<div class="collapse navbar-collapse" id="navbar-collapse-1">
 					<ul class="nav navbar-nav">
-						<li class="active"><a href="services.html">Services<span class="sr-only">(current)</span></a></li>
-							<li><a href="pictures.html">Images</a></li>
+						<li class="active"><a href="about.html">Services<span class="sr-only">(current)</span></a></li>
+							<li><a class='' href="pictures.html">Images</a></li>
 							<li role="separator" class="divider"></li>
-							<li><a href="services.html">Services</a></li>
+							<li><a href="about.html">About</a></li>
 							<li role="separator" class="divider"></li>
 							<li><a href="contact.html">Contact</a></li>
 						</li>
 					</ul>
-
 					<form class="navbar-form navbar-right">
 						<div class="form-group">
 							<input type="text" class="form-control" placeholder="Search">
@@ -45,6 +45,56 @@
 			</div>
 		</nav>
 	</div>
+	<div id="images">
+		<div class="columns">
+			<div class="pin"><img src="images/bgLines.jpg" alt="decoys in the water">
+				<p>Long line decoys in the morning</p>
+			</div>
+			<div class="pin"><img src="images/mandarin.jpg" alt="Mandarin Duck">
+				<p>Mandarin Duck</p>
+			</div>
+			<div class="pin"><img src="images/stormbg.jpg" alt="Storm over the marsh">
+				<p>American Wigeon</p>
+			</div>
+			<div class="pin"><img src="images/storm-wigeon.jpg" alt="Storm Wigeon">
+				<p>Storm Wigeon</p>
+			</div>
+			<div class="pin"><img src="images/Baikal-teal.jpg" alt="Baikal Teal Duck">
+				<p>Baikel Teal</p>
+			</div>
+			<div class="pin"><img src="images/Northern_Pintails.jpg" alt="Northern Pintail">
+				<p>Northern Pintail</p>
+			</div>
+			<div class="pin"><img src="images/better-canada.jpg" alt="Canada Goose">
+				<p>Canada Goose</p>
+			</div>
+			<div class="pin"><img src="images/Green-winged-Teal.jpg" alt="Green wing teal">
+				<p>Green Wing Teal</p>
+			</div>
+			<div class="pin"><img src="images/Blue-Winged-Teal.jpg" alt="Blue wing teal">
+				<p>Blue WIng Teal</p>
+			</div>
+			<div class="pin"><img src="images/blue-goose.jpg" alt="Blue goose">
+				<p>Blue Goose</p>
+			</div>
+			<div class="pin"><img src="images/stormbg.jpg" alt="Storm over the marsh">
+				<p>American Wigeon</p>
+			</div>
+			<div class="pin"><img src="images/Green-winged-Teal.jpg" alt="Green Wing Teal">
+				<p>Green Wing Teal</p>
+			</div>
+			<div class="pin"><img src="images/full-stoop.jpg" alt="Peregrine falcon full stoop">
+				<p>Peregrine Falcon Full Stoop</p>
+			</div>
+			<div class="pin"><img src="images/peregrine.jpg" alt="peregrine in flight">
+				<p>Peregrine Falcon In Flight</p>
+			</div>
+			<div class="pin"><img src="images/green-head.jpg" alt="Green Head">
+				<p>Green Head Duck</p>
+			</div>
+		</div>
+	</div>
+
 	<div class="container-fluid">
 		<div class="row col-sm-12">
 			<div class="panel-footer footer">
