--- a/index.html
+++ b/index.html
@@ -9,58 +9,57 @@
 		<link rel="stylesheet" href="css/custom.css">
 		<script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 		<script defer rel="text/javascript" src="./js/bootstrap.min.js"></script>
+		<script defer rel="text/javascript" src="js/custom.js"></script>
 	</head>
 	<body>
 		<!--======================
 		NAVBAR
 		======================-->
-			<div class="container">
-				<div class="row">
-					<nav class="navbar navbar-inverse navbar-fixed-top bottom-shadow" role="navigation">
-						<div class="container-fluid">
-							<div class="navbar-header">
-								<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1" aria-expanded="false">
-									<span class="sr-only">Toggle Navigation</span>
-									<span class="icon-bar"></span>
-									<span class="icon-bar"></span>
-									<span class="icon-bar"></span>
-								</button>
-								<a class="navbar-brand" href="index.html"><img src="images/dodwords.png" width="100px"></a></a>
-							</div>
+		<div class="container">
+			<div class="navbar navbar-fixed-top navbar-inverse bottom-shadow">
+				<div class="container-fluid">
+					<div class="navbar-header">
+						<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1" aria-expanded="false">
+							<span class="sr-only">Toggle Navigation</span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+						</button>
+						<a class="navbar-brand" href="index.html"><img src="images/dodwords.png" width="100px"></a></a>
+					</div>
 
-							<div class="collapse navbar-collapse" id="navbar-collapse-1">
-								<ul class="nav navbar-nav">
-									<li class="active"><a href="services.html">Services<span class="sr-only">(current)</span></a></li>
-										<li><a href="pictures.html">Images</a></li>
-										<li role="separator" class="divider"></li>
-										<li><a href="services.html">Services</a></li>
-										<li role="separator" class="divider"></li>
-										<li><a href="contact.html">Contact</a></li>
-									</li>
-								</ul>
+					<div class="collapse navbar-collapse" id="navbar-collapse-1">
+						<ul class="nav navbar-nav">
+							<li class="active"><a href="about.html">Services<span class="sr-only">(current)</span></a></li>
+							<li><a href="pictures.html">Images</a></li>
+							<li role="separator" class="divider"></li>
+							<li><a href="about.html">About Us</a></li>
+							<li role="separator" class="divider"></li>
+							<li><a href="contact.html">Contact</a></li>
+							</li>
+						</ul>
 
-								<form class="navbar-form navbar-right">
-									<div class="form-group">
-										<input type="text" class="form-control" placeholder="Search">
-									</div>
-									<button type="submit" class="btn btn-default">Submit</button>
-								</form>
+						<form class="navbar-form navbar-right">
+							<div class="form-group">
+								<input type="text" class="form-control" placeholder="Search">
 							</div>
-						</div>
-					</nav>
+							<button type="submit" class="btn btn-default">Submit</button>
+						</form>
+					</div>
 				</div>
 			</div>
+		</div>
 			<!--======================
 			LOGO
 			=======================-->
-			<div class="container">
+			<div class="container hidden-xs">
 				<div class="row col-md-12 container-2">
-					<img class="logo shadow" src="images/pintail_wood_bg.png" width="">
+					<img class="logo shadow" src="images/pintail_wood_bg.png">
 				</div>
 			</div>
 			<div class="container">
 				<div class="row card shadow">
-					<div class="col-md-4">
+					<div class="col-md-4 col-sm-1">
 						<img class="image" src="images/bgLines.jpg">
 					</div>
 					<div class="col-md-8">
