finished about page

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" href="css/custom.css">
 		<script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 		<script defer rel="text/javascript" src="./js/bootstrap.min.js"></script>
-		<script defer rel="text/javascript" src="js/custom.js"></script>
+		<!--<script defer rel="text/javascript" src="js/custom.js"></script>-->
 	</head>
 	<body>
 	<div class="container">
@@ -27,10 +27,8 @@
 
 				<div class="collapse navbar-collapse" id="navbar-collapse-1">
 					<ul class="nav navbar-nav">
-						<li class="active"><a href="about.html">Services<span class="sr-only">(current)</span></a></li>
+						<li><a href="about.html">About Us<span class="sr-only">(current)</span></a></li>
 							<li><a href="pictures.html">Images</a></li>
-							<li role="separator" class="divider"></li>
-							<li><a href="about.html">About Us</a></li>
 							<li role="separator" class="divider"></li>
 							<li><a href="contact.html">Contact</a></li>
 						</li>
@@ -54,9 +52,34 @@
 		</div>
 	</div>
 	<div class="container">
-		<div class="col-md-12">
-			<div class="card">
-				<p>text here</p>
+		<div class="col-md-12 card shadow">
+				<img class='about-image' src="images/levi.jpg" alt="Levi founder and owner">
+			<div class="col-md-12 ">
+				<h1 class="text-center"><strong>Levi Smith</strong></h1>
+				<p class="text-center">Owner and Founder</p>
+				<div class="line"></div>
+				<div class="col-md-6">
+					<!--<hr />-->
+					<p>Every Hunter has a moto.  &nbsp; this is mine.</p>
+					<blockquote>
+						"If you want to chose a passion that can make you feel frustrated and defeated, choose hunting.  &nbsp;If you want to pursue a way of life that can show little result for huge amounts of effort, choose hunting.  &nbsp; If you don't want to always feel in control, choose hunting. And if you DO choose hunting...<br />
+						you'll never regret a moment.  &nbsp; What I love most about hunters is our sense of optimism.&nbsp; No matter the weather, &nbsp;the numbers or the general outlook for the day, we still get up and do it. &nbsp;We DO IT. &nbsp;We teach our kids to do it. &nbsp;We encourage our friends to do it. &nbsp;We do it every season and start each day with a renewed sense of belonging and hopes for a good hunt. &nbsp;Even if yesterday sucked, "today will be better." Not enough people give you credit for that. &nbsp;Day after day, you get out there in the face of adversity and say "bring it". &nbsp; We pour our focus into one goal and show a mental toughness few people have. &nbsp; We are a special community and I couldn't be more grateful to be a part of it. &nbsp; Thank you to everyone out there who exemplifies the values and pride of our hunting heritage. &nbsp; It takes a village, and YOUR decision to get out there and DO IT makes us the strongest group in the world."  <br />
+						<span style="float:right;"><a href="https://www.facebook.com/tonyvandemore/posts/984270851674318:0">Tony Vandemore 2017</a></span>
+					</blockquote>
+				</div>
+				<div class="col-md-6">
+					<!--<hr>-->
+					<p>I have been waterfowl hunting since I was twelve years old.
+						<br /><br />
+						I start waterfowl hunting on my own intuition.  There was the usual boost from my dad who took me out a few times, and in general supplied me with the equipment I needed.  I got to the point that I need to get more gear than could be afforded on the family budget so I started working any way I could to pay for my new hobby. After that it was up to me to keep going, usually it was with my brother who loved to hunt although it usually wasn't his favorite kind of hunting.
+						<br /><br />
+						I grew up hunting central Utah, mainly Utah Lake.  I learned quickly that when it gets cold no body really wants to take you hunting.  That being said I always found a way to get there.
+						<br /><br />
+						Little did I know this was just the start of my life's passion as I grew up I was almost always in the wrong place at the wrong time.  The typical hunt looked a lot like ducks landing over there lets move and while I was moving they would land right were I was.  In the early years I relied on being in the right place with nothing but a duck call and some fishing waders for retrieves.  With not a decoy to my name it wasn't long before I found a few spots that were productive although the elusive limit was always to be chanced.
+						<br /><br />
+						Now that I am older and have 22 years of waterfowl experience I Hunt anywhere with in a 4 hour drive and take trips to other states to experience new styles of hunting.
+					</p>
+				</div>
 			</div>
 		</div>
 	</div>
