--- a/pictures.html
+++ b/pictures.html
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" href="css/custom.css">
 		<script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 		<script defer rel="text/javascript" src="./js/bootstrap.min.js"></script>
-		<script defer rel="text/javascript" src="js/custom.js"></script>
+		<!--<script defer rel="text/javascript" src="js/custom.js"></script>-->
 	</head>
 	<body>
 	<div class="container">
@@ -27,11 +27,11 @@
 
 				<div class="collapse navbar-collapse" id="navbar-collapse-1">
 					<ul class="nav navbar-nav">
-						<li class="active"><a href="about.html">Services<span class="sr-only">(current)</span></a></li>
+						<li class="active"><a href="about.html">About Us<span class="sr-only">(current)</span></a></li>
 							<li><a class='' href="pictures.html">Images</a></li>
 							<li role="separator" class="divider"></li>
-							<li><a href="about.html">About</a></li>
-							<li role="separator" class="divider"></li>
+							<!--<li><a href="about.html">About</a></li>-->
+							<!--<li role="separator" class="divider"></li>-->
 							<li><a href="contact.html">Contact</a></li>
 						</li>
 					</ul>
